adding example unit test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,9 @@ MESSAGE (STATUS "Checking for boost libraries for unit tests")
 find_package(Boost COMPONENTS system filesystem unit_test_framework)
 IF(Boost_FOUND)
   MESSAGE (STATUS "Necessary Boost libraries found will build & run unit tests for XCDF")
+  enable_testing()
+  include_directories(${Boost_INCLUDE_DIRS})
+  XCDF_ADD_UNIT_TEST(TARGET example-unit-test SOURCES tests/example_unit_test.cc)
 ELSE ()
   MESSAGE (WARNING "Boost libraries missing will not build unit tests")
 ENDIF ()
