adding the most basic unit test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,8 @@ IF(Boost_FOUND)
   MESSAGE (STATUS "Necessary Boost libraries found will build & run unit tests for XCDF")
   enable_testing()
   include_directories(${Boost_INCLUDE_DIRS})
-  XCDF_ADD_UNIT_TEST(TARGET example-unit-test SOURCES tests/example_unit_test.cc)
+  #  XCDF_ADD_UNIT_TEST(TARGET example-unit-test SOURCES tests/example_unit_test.cc)
+  XCDF_ADD_UNIT_TEST(TARGET base-unit-test SOURCES tests/SimpleUnitTest.cc)
 ELSE ()
   MESSAGE (WARNING "Boost libraries missing will not build unit tests")
 ENDIF ()
